name:                snowdrift-api
version:             0.1.0.0
synopsis:            JSON API server for Snowdrift.coop
description:         
  <https://snowdrift.coop Snowdrift.coop> is a free/libre/open-source
  cooperative funding site.
  .
  This is a HTTP server that processes JSON requests pertaining to data on or
  about Snowdrift.coop.
homepage:            https://api.snowdrift.coop/
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (C) 2015 Snowdrift.coop
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

flag dev
  default: False
  description:
    Enable development mode settings, such as disabling optimization and
    enabling warnings.

executable snowdrift-api
  hs-source-dirs:      src/
  -- other-extensions:    
  -- other-modules:       
  main-is:             Main.hs
  default-language:    Haskell2010
  if flag(dev)
    ghc-options: -O0 -Wall
  build-depends:
      base ==4.*
  
