name:                snowdrift-api
version:             0.1.0.0
synopsis:            JSON API server for Snowdrift.coop
description:         
  <https://snowdrift.coop Snowdrift.coop> is a free/libre/open-source
  cooperative funding site.
  .
  This is a HTTP server that processes JSON requests pertaining to data on or
  about Snowdrift.coop.
homepage:            https://api.snowdrift.coop/
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (C) 2015 Snowdrift.coop
category:            Web
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/pharpend/snowdrift-api/issues
extra-source-files:  
  LICENSE
  README.md

flag dev
  default: False
  description:
    Enable development mode settings, such as disabling optimization and
    enabling warnings.

source-repository head
  type: git
  location: git://github.com/pharpend/snowdrift-api.git

source-repository this
  type: git
  location: git://github.com/pharpend/snowdrift-api.git
  branch: master
  tag: 0.1.0.0

executable snowdrift-api
  hs-source-dirs:      src/
  main-is:             Main.hs
  default-language:    Haskell2010
  other-extensions:    
    CPP
    MultiWayIf
    OverloadedStrings
  if flag(dev)
    ghc-options: -O0 -Wall
  build-depends:
      aeson
    , base ==4.*
    , bytestring
    , conduit >=1.2.3
    , conduit-extra >=1
    , conduit-combinators
    , pager
    , text
    , wai
    , warp
  
