name:                snowdrift-api
version:             0.1.0.0
synopsis:            JSON API server for Snowdrift.coop
description:
  <https://snowdrift.coop Snowdrift.coop> is a free/libre/open-source
  cooperative funding site.
  .
  This is a HTTP server that processes JSON requests pertaining to data on or
  about Snowdrift.coop.
homepage:            https://api.snowdrift.coop/
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (C) 2015 Snowdrift.coop
category:            Web
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/pharpend/snowdrift-api/issues
extra-source-files:
  api-guide.md
  LICENSE
  README.md
data-files:
  api-guide.md
  LICENSE

flag dev
  default: False
  description:
    Enable development mode settings, such as disabling optimization and
    enabling warnings.

source-repository head
  type: git
  location: git://github.com/pharpend/snowdrift-api.git

source-repository this
  type: git
  location: git://github.com/pharpend/snowdrift-api.git
  branch: master
  tag: 0.1.0.0

executable snowdrift-api
  hs-source-dirs:      src/
  main-is:             Main.hs
  default-language:    Haskell2010
  if flag(dev)
    ghc-options: -O0 -Wall
  other-extensions:
    CPP
    MultiWayIf
    OverloadedStrings
  other-modules:
    Paths_snowdrift_api
  build-depends:
      aeson
    , attoparsec
    , base ==4.*
    , blaze-html
    , bytestring
    , conduit >=1.2.3
    , conduit-extra
    , conduit-combinators
    , resourcet
    , http-types
    , markdown
    , mtl
    , pager
    , safe
    , text
    , unix
    , unordered-containers
    , wai
    , wai-conduit
    , warp
